Fixed a mistake with setting the CrOS scale

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,10 @@
-xfwm4 (4.12.2-1ubuntu3) vivid; urgency=medium
+xfwm4 (4.12.2-1ubuntu5) vivid; urgency=medium
+
+  * Improved scaling and rotation patch
+
+ -- Hugh Greenberg <hugh@galliumos.org>  Sun, 29 Nov 2015 00:06:11 +1100
+
+xfwm4 (4.12.2-1ubuntu4) vivid; urgency=medium
 
   * Improved scaling and rotation patch
 
